--- a/webapp-travel-agency/Views/Home/ViewAgenziaViaggi/ModificaViaggi.cshtml
+++ b/webapp-travel-agency/Views/Home/ViewAgenziaViaggi/ModificaViaggi.cshtml
@@ -2,11 +2,11 @@
 
 <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalCenteredScrollableTitle">Modifica Viaggio</h5>
+        <h5 class="modal-title" id="exampleModalCenteredScrollableTitle">Aggiugni un nuovo Viaggio</h5>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
-        <form method="post" action="@Url.Action("ModificaViaggio", "AreaAmministrazione")">
+        <form method="post" action="@Url.Action("CreaNuovoViaggio", "AreaAmministrazione")">
 		@Html.AntiForgeryToken()
 	<div class="mb-3">
 	<strong>Imamgine Viaggio:</strong>
@@ -47,7 +47,7 @@
         <p>Just like that.</p>
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Annulla</button>
-        <button type="button" class="btn btn-primary">Salva Viaggio</button>
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Annulla modifiche</button>
+        <button type="button" class="btn btn-primary">Salva modifiche</button>
       </div>
     </div>
