--- a/webapp-travel-agency/Views/Home/ViewAgenziaViaggi/ModificaViaggi.cshtml
+++ b/webapp-travel-agency/Views/Home/ViewAgenziaViaggi/ModificaViaggi.cshtml
@@ -2,11 +2,11 @@
 
 <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalCenteredScrollableTitle">Aggiugni un nuovo Viaggio</h5>
+        <h5 class="modal-title" id="exampleModalCenteredScrollableTitle">Modifica Viaggio</h5>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
-        <form method="post" action="@Url.Action("CreaNuovoViaggio", "AreaAmministrazione")">
+        <form method="post" action="@Url.Action("ModificaViaggio", "AreaAmministrazione")">
 		@Html.AntiForgeryToken()
 	<div class="mb-3">
 	<strong>Imamgine Viaggio:</strong>
@@ -39,15 +39,11 @@
 		<input asp-for="@Model.CostoViaggio" class="d-block w-100" />
 		<span asp-validation-for="@Model.CostoViaggio" class="text-danger"></span>
 	</div>
-	<strong>Categoria: </strong>
-	<div class="text-end">
-		<input type="submit" class="btn btn-small btn-info" value="Salva pizza">
-	</div>
+	 <p>Prova per controller modificare il viaggio</p>
+	<div class="modal-footer">
+			<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Annulla modifiche</button>
+			<input  type="submit" class="btn btn-primary" value="Salva modifiche">
+			</div>
 	</form>
-        <p>Just like that.</p>
       </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Annulla modifiche</button>
-        <button type="button" class="btn btn-primary">Salva modifiche</button>
       </div>
-    </div>
