Finita pagina milestone 1 devo fare piccoli accorgimenti grafici

--- a/webapp-travel-agency/Views/AreaAmministrazione/ModificaViaggi.cshtml
+++ b/webapp-travel-agency/Views/AreaAmministrazione/ModificaViaggi.cshtml
@@ -6,7 +6,7 @@
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
-        <form method="post" action="@Url.Action("ModificaViaggio", "ViewAgenziaViaggi")">
+        <form method="post" action="@Url.Action("ModificaViaggio", "AreaAmministrazione")">
 		@Html.AntiForgeryToken()
 	<div class="mb-3">
 	<strong>Imamgine Viaggio:</strong>
