Corretti errore per il controller modifica, non riuscivo a viasuliazzare la sezione modfica

--- a/webapp-travel-agency/Views/AreaAmministrazione/DettagliViaggio.cshtml
+++ b/webapp-travel-agency/Views/AreaAmministrazione/DettagliViaggio.cshtml
@@ -10,8 +10,8 @@
           <p class="card-text">@Model.DescrizioneViaggio</p>
         </div>
         <div class="card-footer bg-white">
-          <p class="text-succes text-warning">@Model.DurataViaggio - @Model.DestinazioniViaggio</p>
-          <span class="fw-bolder">@Model.CostoViaggio</span> <span class="text-muted">/person</span>
+          <p class="text-succes text-warning">@Model.DurataViaggio giorno/i - @Model.DestinazioniViaggio destinazione/i</p>
+          <span class="fw-bolder">@Model.CostoViaggio</span> <span class="text-muted">a persona</span>
         </div>
         </div>
       </div>
