Risolto problema con Json adesso si caricano i viaggi

--- a/webapp-travel-agency/Views/AreaClienti/HomepageClienti.cshtml
+++ b/webapp-travel-agency/Views/AreaClienti/HomepageClienti.cshtml
@@ -25,7 +25,7 @@
 </div>
 
 @section Scripts {
-
+    
     <script type="text/javascript">
 
         document.getElementById("search_input").addEventListener('keyup', searchItems);
@@ -36,7 +36,6 @@
             var inputText = document.getElementById('search_input').value;
             loadviaggio(inputText);
         }
-
         function loadviaggio(searchParameter){
             document.getElementById('viaggio-div').innerHTML = '';
 
@@ -59,23 +58,19 @@
                    result.data.forEach(viaggio => {
                        document.getElementById('viaggio-div').innerHTML += 
                             `
-                        <div class="container">
-                            <<div class="row me-5 text-center justify-content-center fluid">
                               <div class="col-3">
                                 <div class="card h-100 shadow">
-                                  <img src="${viaggio.ImamgineViaggio}" class="card-img-top">
-                                  <div class="card-header text-white bg-warning mb-3 fw-bolder fs-5">"${viaggio.TitoloViaggio}" </div>
+                                  <img src="${viaggio.immagineViaggio}" class="card-img-top">
+                                  <div class="card-header text-white bg-warning mb-3 fw-bolder fs-5">"${viaggio.titoloViaggio}" </div>
                                 <div class="card-body"> 
-                                  <p class="card-text">"${viaggio.DescrizioneViaggio}"</p>
+                                  <p class="card-text">"${viaggio.descrizioneViaggio}"</p>
                                 </div>
                                 <div class="card-footer bg-white">
-                                  <p class="text-succes text-warning">"${viaggio.DurataViaggio}" giorno/i - "${viaggio.DestinazioniViaggio}" destinazione/i</p>
-                                  <span class="fw-bolder">"${viaggio.CostoViaggio}" €</span> <span class="text-muted">/person</span>
-                                </div>
+                                  <p class="text-succes text-warning">"${viaggio.durataViaggio}" giorno/i - "${viaggio.destinazioniViaggio}" destinazione/i</p>
+                                  <span class="fw-bolder">"${viaggio.costoViaggio}" €</span> <span class="text-muted">/person</span>
                                 </div>
                               </div>
-                            </div>
-                        </div>
+                             </div>
                             `
                     });
                 }
