--- a/webapp-travel-agency/Views/Shared/_LayoutAmministrazione.cshtml
+++ b/webapp-travel-agency/Views/Shared/_LayoutAmministrazione.cshtml
@@ -8,11 +8,20 @@
  </head>
   <body>
   <header>
-   <nav class="navbar bg-light">
-      <div class="container-fluid">
+   <nav class="navbar bg-light inline">
+      <div class="container-fluid">Sezione amministrativa
             <a class="nav-link active align-content-xxl-center" aria-current="page" href="@Url.Action("Index","AreaAmministrazione")">
-          <img src="/docs/5.2/assets/brand/bootstrap-logo.svg" alt="" width="30" height="24" class="d-inline-block align-text-top">
-          Sezione amministrativa
+          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-house-door" viewBox="0 0 16 16">
+              <path d="M8.354 1.146a.5.5 0 0 0-.708 0l-6 6A.5.5 0 0 0 1.5 7.5v7a.5.5 0 0 0 .5.5h4.5a.5.5 0 0 0 .5-.5v-4h2v4a.5.5 0 0 0 .5.5H14a.5.5 0 0 0 .5-.5v-7a.5.5 0 0 0-.146-.354L13 5.793V2.5a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5v1.293L8.354 1.146zM2.5 14V7.707l5.5-5.5 5.5 5.5V14H10v-4a.5.5 0 0 0-.5-.5h-3a.5.5 0 0 0-.5.5v4H2.5z"/>
+            </svg>
+        </a>
+      </div>
+        <div class="container-fluid"> Sezione clienti
+            <a class="nav-link active align-content-xxl-center" aria-current="page" href="@Url.Action("Index","AreaClienti")">
+         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-house-fill" viewBox="0 0 16 16">
+          <path fill-rule="evenodd" d="m8 3.293 6 6V13.5a1.5 1.5 0 0 1-1.5 1.5h-9A1.5 1.5 0 0 1 2 13.5V9.293l6-6zm5-.793V6l-2-2V2.5a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5z"/>
+          <path fill-rule="evenodd" d="M7.293 1.5a1 1 0 0 1 1.414 0l6.647 6.646a.5.5 0 0 1-.708.708L8 2.207 1.354 8.854a.5.5 0 1 1-.708-.708L7.293 1.5z"/>
+        </svg>
         </a>
       </div>
     </nav>
@@ -24,5 +33,8 @@
     </a>
   </header>
   <main> @RenderBody(); </main>
+   
+   <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.20.0/axios.min.js"> </script>
+   @RenderSection("Scripts", required: false)
   </body>
 </html>
