--- a/webapp-travel-agency/Views/AreaClienti/HomepageClienti.cshtml
+++ b/webapp-travel-agency/Views/AreaClienti/HomepageClienti.cshtml
@@ -2,10 +2,15 @@
     <div class="row">
         <div class="col-12">
             <div class="d-flex justify-content-between align-items-center">
-                <h1 class="mt-3 mb-3">Lista viaggi disponibili</h1>
-                <div>
-                    <input id="search_input" type="text" class="form-control" placeholder="Cerca">
-                </div>
+                <nav class="navbar bg-light">
+                  <div class="container-fluid">
+                    <a class="navbar-brand">Ricerca il viaggio ceh ti interessa</a>
+                    <form class="d-flex" role="search">
+                      <input id="search_input" class="form-control me-2" type="search" placeholder="Cerca" aria-label="Search">
+                      <button  class="btn btn-outline-success" type="submit">Search</button>
+                    </form>
+                  </div>
+                </nav>
             </div>
         </div>
     </div>
