Effettuati altri miglioramenti tecnici

--- a/webapp-travel-agency/Views/AreaAmministrazione/DettagliViaggio.cshtml
+++ b/webapp-travel-agency/Views/AreaAmministrazione/DettagliViaggio.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Viaggio
 
 <div class="container">
-    <<div class="row me-5 text-center justify-content-center fluid">
+    <div class="row me-5 text-center justify-content-center fluid">
       <div class="col-3">
         <div class="card h-100 shadow">
           <img src="@Model.ImmagineViaggio" class="card-img-top">
