--- a/webapp-travel-agency/Views/AreaAmministrazione/FormCreaNuovoViaggio.cshtml
+++ b/webapp-travel-agency/Views/AreaAmministrazione/FormCreaNuovoViaggio.cshtml
@@ -3,9 +3,9 @@
 <div class="modal-content">
       <div class="modal-header">
         <h5 class="modal-title" id="exampleModalCenteredScrollableTitle">Aggiugni un nuovo Viaggio</h5>
-        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        <button type="button" class="btn-close  me-3" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
-      <div class="modal-body">
+      <div class="modal-body mx-2">
         <form method="post" action="@Url.Action("CreaNuovoViaggio", "AreaAmministrazione")">
 		@Html.AntiForgeryToken()
 	<div class="mb-3">
@@ -40,7 +40,7 @@
 		<span asp-validation-for="@Model.CostoViaggio" class="text-danger"></span>
 	</div>
 		<div class="modal-footer">
-			<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Annulla</button>
+			<button type="button" class="btn btn-secondary me-2" data-bs-dismiss="modal">Annulla</button>
 			<input  type="submit" class="btn btn-primary" value="Salva Viaggio">
 		</div>
 	</form>
