--- a/webapp-travel-agency/Views/AreaClienti/HomepageClienti.cshtml
+++ b/webapp-travel-agency/Views/AreaClienti/HomepageClienti.cshtml
@@ -1,19 +1,13 @@
-﻿<div class="container">
-    <div class="row">
-        <div class="col-12">
-            <div class="d-flex justify-content-between align-items-center">
-                <nav class="navbar bg-light">
-                  <div class="container-fluid">
-                    <a class="navbar-brand">Ricerca il viaggio ceh ti interessa</a>
-                    <form class="d-flex" role="search">
-                      <input id="search_input" class="form-control me-2" type="search" placeholder="Cerca" aria-label="Search">
-                      <button  class="btn btn-outline-success" type="submit">Search</button>
-                    </form>
-                  </div>
-                </nav>
-            </div>
-        </div>
-    </div>
+﻿<nav class="navbar bg-light">
+ <div class="container-fluid">
+     <a class="navbar-brand">Ricerca il viaggio che ti interessa</a>
+     <form class="d-flex" role="search">
+    <input id="search_input" class="form-control me-2" type="search" placeholder="Cerca" aria-label="Search">
+    <button  class="btn btn-outline-success" type="submit">Search</button>
+    </form>
+ </div>
+ </nav>
+<div class="container mt-4">
     <div id="viaggio-wait" class="row js_wait_viaggio text-center">
         <div class="col-12">
             <h3>Sto aspettando i viaggi ...</h3>
@@ -63,7 +57,7 @@
                    result.data.forEach(viaggio => {
                        document.getElementById('viaggio-div').innerHTML += 
                             `
-                              <div class="col-3">
+                              <div class="col-3 ms-2">
                                 <div class="card h-100 shadow">
                                   <img src="${viaggio.immagineViaggio}" class="card-img-top">
                                   <div class="card-header text-white bg-warning mb-3 fw-bolder fs-5">"${viaggio.titoloViaggio}" </div>
